# progettoLC

./: .gitignore  LICENSE
bnfc example/: AbsBNF.hs  BNF.cf  DocBNF.txt  LexBNF.hs  LexBNF.x  ParBNF.hs  ParBNF.y  PrintBNF.hs  SkelBNF.hs  TestBNF.hs  testparte3.hs
parte 1/: prima relazione.tex
parte 2/: ProgettoLC_parte2a_Filippo_Callegari_Relazione.tex  esercizio.hs  test.hs
parte 2b/: 2b.hs  fronte.tex  relazione.tex
parte 3/: AbsBNF.hs  AltroMain.hs  BNF.cf  DocBNF.txt  LexBNF.hs  LexBNF.x  Main.hs  Makefile  ParBNF.hs  ParBNF.y  Parte3.hs  PrintBNF.hs  SkelBNF.hs  Test.hs  TestBNF.hs  test.txt
parte 4/: bnf.cf  bnf1.cf  env.c  prettyprint.txt  test.txt
parte 4/test2/: .gitignore  Absyn.c  Absyn.h  Lexer.c  Makefile  Parser.c  Parser.h  Printer.c  Printer.h  Skeleton.c  Skeleton.h  Test.c  bnf1.cf  bnf1.l  bnf1.y  env.c  env.h
parte 4/test3/: .gitignore  Absyn.c  Absyn.h  CMakeLists.txt  Lexer.c  Makefile  Parser.c  Parser.h  Parser.output  Printer.c  Printer.h  Skeleton.c  Skeleton.h  Test.c  bnf1.cf  bnf1.l  bnf1.y  env.c  env.h  prettyprint.conf  testfile.c  ti.conf  ti1.conf  ti2.conf  y.tab.c
parte 5/: AbsBnfc.hs  DocBnfc.txt  LexBnfc.hs  LexBnfc.x  ParBnfc.hs  ParBnfc.y  PrintBnfc.hs  SkelBnfc.hs  TestBnfc.hs  bnfc.cf
parte 5 totale/: ParAuL.y  PrintAuL.hs
parte 5 totale/relazione/: .gitignore  main.tex  main.toc
parte 5 totale/tmp1/: Code.hs  Env.hs  ParAuL.y  PrintAuL.hs  TAC.hs  Utils.hs  auL.cf  main.hs
parte 5/finale/: Env.hs  Makefile  ParAuL.y  PrintAuL.hs
parte 5/relazione/: main.tex
parte 5/tmp1/: .gitignore  Makefile  bnfc.cf
(+49 files in other folders)
